# open-agentinstruct

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  env.yml  gen_data.py  lm_eval.sh  main.py  pyproject.toml  setup.cfg  test_script.py
.github/workflows/: publish.yml  test.yml
agents/: agent_configs.json  async_chat.py  base_agent.py  content_gen_agents.json  content_transformation.py  instruction_gen_agents.json  instruction_generation.py  instruction_refinement.py
agents/split_agents/content_generation/: analytical_reasoning_content.json  brain_teaser_content.json  coding_content.json  conversation_content.json  creative_content_content.json  data_to_text_content.json  fermi_content.json  few_shot_reasoning_content.json  multiple_choice_question_content.json  open_domain_question_answering_content.json  rag_content.json  reading_comprehension_content.json  text_classification_content.json  text_extraction_content.json  text_modification_content.json  tool_use_content.json  web_agent_content.json
agents/split_agents/instruction_generation/: analytical_reasoning_instruction.json  brain_teaser_instruction.json  coding_instruction.json  conversation_instruction.json  creative_content_instruction.json  data_to_text_instruction.json  fermi_instruction.json  few_shot_reasoning_instruction.json  multiple_choice_question_instruction.json  open_domain_question_answering_instruction.json  rag_instruction.json  reading_comprehension_instruction.json  text_classification_instruction.json  text_extraction_instruction.json  text_modification_instruction.json  tool_use_instruction.json  web_agent_instruction.json
benchmarks/: deepeval_benchmarks.py  deepeval_model.py  get_drop.py  get_mmlu.py  run_benchmarks.sh
finetuning/: finetune.py
open_agentinstruct/: __init__.py  cli.py
open_agentinstruct/agents/: __init__.py  async_chat.py  content_transformation.py  instruction_generation.py  instruction_refinement.py
open_agentinstruct/agents/split_agents/content_generation/: analytical_reasoning_content.json  brain_teaser_content.json  coding_content.json  conversation_content.json  creative_content_content.json  data_to_text_content.json  fermi_content.json  few_shot_reasoning_content.json  multiple_choice_question_content.json  open_domain_question_answering_content.json  rag_content.json  reading_comprehension_content.json  text_classification_content.json  text_extraction_content.json  text_modification_content.json  tool_use_content.json  web_agent_content.json
open_agentinstruct/agents/split_agents/instruction_generation/: analytical_reasoning_instruction.json  brain_teaser_instruction.json  coding_instruction.json  conversation_instruction.json  creative_content_instruction.json  data_to_text_instruction.json  fermi_instruction.json  few_shot_reasoning_instruction.json  multiple_choice_question_instruction.json  open_domain_question_answering_instruction.json  rag_instruction.json  reading_comprehension_instruction.json  text_classification_instruction.json  text_extraction_instruction.json  text_modification_instruction.json  tool_use_instruction.json  web_agent_instruction.json
open_agentinstruct/utils/: __init__.py  agent_utils.py  filter_mcq.py  text_extraction.py  visualization.py
utils/: agent_utils.py  convert_to_chat.py  filter_mcq.py  get_datasets.py  text_extraction.py  visualization.py
