[metadata]
# description-file = README.md # Handled by pyproject.toml

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

# --- Core Dependencies --- Review and Add ALL necessary packages!
install_requires =
    python-dotenv>=1.0.0
    nest_asyncio>=1.5.0
    aiohttp >= 3.0.0 # Likely needed for async_chat_completion
    backoff # Likely needed for async_chat_completion
    litellm>=1.35.0 # Added missing dependency for async_chat
    # Add your specific LLM provider library (e.g., google-generativeai, openai)
    datasets>=2.0.0 # For Hugging Face datasets
    pdfminer.six>=20221105 # For PDF extraction
    setuptools # Provides pkg_resources used in cli.py
    # Add any other libraries imported in agents/ or utils/ or cli.py

[options.packages.find]
where = .
# Exclude directories that are not part of the installable package
exclude =
    tests*
    data*
    .cache*
    finetuned_models*
    wandb*
    finetuning*
    notebooks*
    .github*
    .git*

# --- Include non-code files (agent configs) ---
[options.package_data]
open_agentinstruct = agents/split_agents/**/*.json

# --- Extras --- Define optional dependencies for different features/dev environments
[options.extras_require]
# Example: Add dependencies for specific LLM providers if you support multiple
# gemini =
#     google-generativeai>=0.3.0
# openai =
#     openai>=1.0.0

pdf =
    pdfminer.six>=20221105

hf_datasets =
    datasets>=2.0.0

# Testing dependencies
test =
    pytest>=7.0.0
    # Add other testing libs like pytest-cov, responses, etc.

# Development dependencies (includes testing)
dev =
    %(test)s
    ruff # Example linter/formatter
    build # For building packages
    twine # For uploading packages
    pre-commit # For git hooks
    # Add any other dev tools
